# load-test-rtsp-stream

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: config.docker.yaml  config.yaml
docs/: CLAUDE.md  DOCKER_SETUP.md  INSTALLATION_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  TEST_STREAM_GUIDE.md
examples/: consumer_example.py  test_stream_consumer.py
scripts/: setup.py  setup.sh  webcam_record.py
src/rtsp_load_tester/: __init__.py  main.py  orchestrator.py  stream_publisher.py  video_generator.py
videos/: README.md
